[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.1.0",
    "gwpy>=3.0.13",
    "healpy>=1.18.1",
    "ligo-skymap>=2.4.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scipy>=1.16.1",
    "streamlit>=1.49.0",
]
